<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical"
        android:minHeight="500dp"
        android:minWidth="400dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/popUp_RR_header"
                android:layout_gravity="center"
                android:autoSizeMinTextSize="25dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#2C28FF"/>

        </androidx.cardview.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="14">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/steps"
                            android:layout_gravity="center"
                            android:textSize="25dp"
                            android:gravity="center"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/step_1"
                            android:textSize="25dp"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:layout_margin="5dp"/>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_inhale_exhale"/>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/Step_2"
                            android:textSize="25dp"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:layout_margin="5dp"/>


                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="5">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="160dp"
                            android:layout_margin="5dp">

                            <ImageView
                                android:id="@+id/dialog_touch_display"
                                android:src="@drawable/ic_touch_blue_150"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_gravity="center"/>

                        </androidx.cardview.widget.CardView>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="TAP HERE"
                            android:layout_margin="5dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/Step_3"
                            android:textSize="25dp"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:layout_margin="5dp"/>


                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Tap Confirmed"
                            android:autoSizeMinTextSize="25dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:layout_margin="5dp"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="5dp">

                        <ImageView
                            android:id="@+id/touchView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_gravity="center"/>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/Step_4"
                            android:textSize="25dp"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:layout_margin="5dp"/>


                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Cautions!!"
                            android:layout_gravity="center"
                            android:textSize="25dp"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textColor="#2C28FF"/>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Only tap the screen for either inhale or exhale. Not for both!"
                            android:textColor="#2C28FF"
                            android:autoSizeMinTextSize="25dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:layout_margin="5dp"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_margin="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Taps should be performed by another person."
                            android:textColor="#2C28FF"
                            android:autoSizeMinTextSize="25dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:layout_margin="5dp"/>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>




            </LinearLayout>




        </ScrollView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <Button
                    android:id="@+id/popButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="Ok"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:background="#2C28FF"/>


            </RelativeLayout>


        </LinearLayout>



    </LinearLayout>

</layout>